welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: '(' expected but identifier found.
	return (if (a==b) 0 else {if Math.abs(a-10)< ( Math.abs(b-10))) a else b}
                                     ^close10:2: error: illegal start of simple expression
	return (if (a==b) 0 else {if Math.abs(a-10)< ( Math.abs(b-10))) a else b}
                                                                                ^close10:3: error: ')' expected but '}' found.
}
^